--- a/knapsack visualization/index.html
+++ b/knapsack visualization/index.html
@@ -12,34 +12,36 @@
         <header>knapsack problem visualization</header>
         <nav>
             <ul class="top_menu">
-                <li>guide</li>
-                <li>about algorithm</li>
-                <li class="active_button">classic task</li>
-                <li>alternative task</li>
+                <li id="guide_button" class="button">инструкция</li>
+                <li id="about_algo_button" class="button">про алгоритм</li>
+                <li id="classic_task_button" class="active_button">classic task</li>
+                <li id="alt_task_button" class="button">alternative task</li>
             </ul>
         </nav>
         <div id="container">
-            <div id="control_panel">
+            <div id="control_panel" class="active_window">
                 <div id="number_of_items">
-                    <p>Количество предметов:<input type="number" max="15" min="1"></p>
-                    <p>Вместимость рюкзака : <input type="number" max="20" min="1"></p>
+                    <p>Количество предметов:<input id="items_number_input" type="number" max="20" min="1"></p>
+                    <p>Вместимость рюкзака :<input id="capacity_input" type="number" max="20" min="1"></p>
                 </div>
-                <div id="weight_and_price">weight_and_price</div>
-                <div id="answer_button">answer_button</div>
-                <div id="start_button">start_button</div>
-                <div id="step_button">step_button</div>
+                <div id="weight_and_price">
+                    <div id="weights">Вес предмета :<div id="w_array"></div></div>
+                    <div id="prices">Его стоимость:<div id="p_array"></div></div>
+                </div>
+                <div id="answer_button" class="button">answer_button</div>
+                <div id="start_button" class="button">start_button</div>
+                <div id="step_button" class="button">step_button</div>
             </div>
-            <div id="content">
-                <div id="algorithm_table">algorithm_table</div>
-                <div id="step_info">step_info</div>
-                <div id="algorithm_result">algorithm_result</div>
+            <div id="content" class="active_window">
+                <div id="algorithm_table"></div>
+                <div id="step_info"></div>
+                <div id="algorithm_result"></div>
             </div>
+            <div id="instruction" class="inactive_window">инструкция</div>
+            <div id="about_algorithm" class="inactive_window">про алгоритм</div>
         </div>
     </div>
-    <footer>
-        <!--div id="footer">
-            <div if="footer_logo">2021 tg: @akimovnick</div>
-        </div-->
-    </footer>
+    <script src="js/app.js"></script>
+    <noscript>Для корректной работы нужно включить поддержку JavaScript!</noscript>
 </body>
 </html>
