--- a/knapsack visualization/index.html
+++ b/knapsack visualization/index.html
@@ -14,8 +14,8 @@
             <ul class="top_menu">
                 <li id="guide_button" class="button">инструкция</li>
                 <li id="about_algo_button" class="button">про алгоритм</li>
-                <li id="classic_task_button" class="active_button">classic task</li>
-                <li id="alt_task_button" class="button">alternative task</li>
+                <li id="classic_task_button" class="active_button">классическое условие</li>
+                <li id="alt_task_button" class="button">альтернативная задача</li>
             </ul>
         </nav>
         <div id="container">
@@ -28,14 +28,29 @@
                     <div id="weights">Вес предмета :<div id="w_array"></div></div>
                     <div id="prices">Его стоимость:<div id="p_array"></div></div>
                 </div>
-                <div id="answer_button" class="button">answer_button</div>
-                <div id="start_button" class="button">start_button</div>
-                <div id="step_button" class="button">step_button</div>
+                <div id="start_button" class="button">старт</div>
+                <div id="answer_button" class="button">получить ответ</div>
+                <div id="step_button" class="button">следующий шаг</div>
             </div>
             <div id="content" class="active_window">
-                <div id="algorithm_table"></div>
-                <div id="step_info"></div>
-                <div id="algorithm_result"></div>
+                <div id="algorithm_table">
+                    <h3>таблица динамики</h3>
+                    <div id="dynamic_table">
+                        
+                    </div>
+                </div>
+                <div id="step_info">
+                    <h3>описание шага</h3>
+                    <div id="step_info_block">
+
+                    </div>
+                </div>
+                <div id="algorithm_result">
+                    <h3>результат работы алгоритма</h3>
+                    <div id="result_block">
+
+                    </div>
+                </div>
             </div>
             <div id="instruction" class="inactive_window">инструкция</div>
             <div id="about_algorithm" class="inactive_window">про алгоритм</div>
